# grc-audit-swarm

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .secrets.baseline.new  AGENTS.md  CASE_STUDY.md  Dockerfile  README.md  app.py  aws_safety_heartbeat.py  benchmark_mcp.py  benchmark_s3.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  run.sh  run_monitor.py  swarm_sandbox.py  test_aws_mcp.py
.github/: dependabot.yml
.github/workflows/: ai-review.yml  ci.yml  claude.yml  codeql.yml  dependency-review.yml
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
frontend/: README.md  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/hooks/: useAuditDetail.ts  useAuditList.ts  useAuditStream.ts
skills/: aws_cloud_security.yaml  gdpr_privacy.yaml  hipaa_privacy.yaml  itgc_general.yaml  pci_dss.yaml
src/api/: auth.py  executor.py  job_store.py  main.py  models.py
src/api/routers/: evidence.py  phases.py  sessions.py
src/grc_audit_swarm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/swarm/: app_flow.py  audit_flow.py  audit_snapshot.py  audit_workflow_service.py  evidence.py  graph.py  graph_service.py  llm_factory.py  mcp_server.py  review_actions.py  runtime_adapters.py  schema.py  session_manager.py  session_sync.py  skill_loader.py  storage.py  workflow_types.py
src/swarm/agents/: challenger.py  concluder.py  evidence_collector.py  mapper.py  orchestrator.py  researcher.py  specialist.py  worker.py
src/swarm/auth/: permissions.py
src/swarm/config/: fieldwork_agents.yaml  fieldwork_tasks.yaml  mcp_servers.yaml  planning_agents.yaml  planning_tasks.yaml  reporting_agents.yaml  reporting_tasks.yaml
src/swarm/crews/: fieldwork_crew.py  planning_crew.py  reporting_crew.py  result_adapter.py
src/swarm/state/: machine.py  repository.py  schema.py
src/swarm/tools/: aws_tools.py
src/ui/components/: common.py  phase1_review.py  phase2_review.py  progress.py  scope_input.py  sidebar.py  state.py  styles.py
tests/: conftest.py  test_agents.py  test_ai_security.py  test_api.py  test_app_flow.py  test_audit_flow.py  test_audit_workflow_service.py  test_aws_mcp_integration.py  test_aws_tools.py  test_bdd_evaluation.py  test_crewai_migration.py  test_evidence.py  test_graph.py  test_llm_factory.py  test_llm_judge_eval.py  test_review_actions.py  test_runtime_adapters.py  test_schema.py  test_skill_loader.py  test_streamlit_app.py  test_ui_state.py
tests/features/: evaluation.feature
tests/legacy/: test_agents.py  test_app_flow.py  test_audit_snapshot.py  test_bdd_evaluation.py  test_graph.py  test_graph_service.py  test_llm_judge_eval.py  test_review_actions.py  test_session_manager.py  test_storage.py
tests/mock_data/: aws_s3_audit.json
(+17 files in other folders)
