[project]
name = "grc-audit-swarm"
version = "0.1.0"
description = "AI Multi-Agent Audit System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.2.0",
    "pdfplumber>=0.10.3",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.0",
    "openpyxl>=3.1.2",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain-community>=0.4.1",
    "duckduckgo-search>=8.1.1",
    "mcp[cli]>=1.26.0",
    "tenacity>=8.2.0",
    "pydantic-settings>=2.0.0",
    "crewai[google-genai]>=0.86.0",
    "crewai-tools>=0.14.0",
    "litellm>=1.83.0",
    "groq>=0.37.1",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B105", "B404", "B603", "B607"] # Skip assert, password false-positives, and necessary subprocess calls

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=5.0.0",
    "pyright>=1.1.0",
    "ruff>=0.15.5",
]
