[project]
name = "grc-audit-swarm"
version = "0.1.0"
description = "AI Multi-Agent Audit System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.2.0",
    "pdfplumber>=0.10.3",
    "pydantic>=2.7.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.0",
    "openpyxl>=3.1.2",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "duckduckgo-search>=8.1.1",
    "mcp[cli]>=1.26.0",
    "tenacity>=8.2.0",
    "pydantic-settings>=2.0.0",
    "crewai>=1.6.0",
    "crewai-tools>=0.20.0",
    "litellm>=1.83.7",
    "groq>=0.37.1",
    "pygments>=2.20.0",
    "requests>=2.33.0",
    "boto3>=1.34.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B105"] # Skip assert and password false-positives

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pre-commit>=4.3.0",
    "pytest>=9.0.3",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=5.0.0",
    "pyright>=1.1.0",
    "ruff>=0.15.5",
]
